# Macro

./: CMakeLists.txt
glad/: glad.h
imgui/: imgui_impl_opengl3.h
source/: Day.cpp  Day.h  Entry.h  FileManager.cpp  FileManager.h  MacroLog.cpp  app.h
